--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,13 +6,13 @@
 #    By: afakili <afakili@student.42istanbul.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 15:31:36 by afakili           #+#    #+#              #
-#    Updated: 2022/11/30 15:35:39 by afakili          ###   ########.fr        #
+#    Updated: 2022/11/30 23:55:27 by afakili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = gcc
-CFLAGS = -Wall -Wextra -Werror #-fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror #-fsanitize=thread -g
 SRCS = ft_init.c ft_routine.c ft_utils.c philosophers.c
 
 OBJ = $(SRCS:.c=.o)
